Fixing tag overlapping "READ MORE" and comment count
https://trac.corp.sourceforge.com/trac/webdesign/ticket/275

tracks internal commit d7c94b7675df0cf2786985417470869444763a85

--- a/plugins/Ajax/htdocs/images/tag-ui.css
+++ b/plugins/Ajax/htdocs/images/tag-ui.css
@@ -346,6 +346,7 @@ div.tag-widget {
 	z-index: 10;
 	padding: 0 0.4em 0 0.8em;
 	text-align: right;
+	margin-left:15em;
 }
 
 #firehose div.tag-widget-stub.body-widget.expanded,
